Fix output z-index

--- a/src/css/_tmc-output.sass
+++ b/src/css/_tmc-output.sass
@@ -77,7 +77,7 @@ $output-height: 250px
   bottom: 0
   left: 0
   width: 100%
-  z-index: 5
+  z-index: 7
   height: $output-height
   border-bottom-left-radius: 5px
 
